infrastructure/base/layer2/cdi/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cdi-uploadproxy
  namespace: cdi-system

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`cdi-uploadproxy.cluster.arpa`)
      kind: Rule
      services:
        - name: cdi-uploadproxy
          namespace: cdi-system
          port: 443
  tls:
    secretName: traefik-tls
